--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,10 @@ endorsed.classpath=\
 excludes=
 file.reference.commons-codec-1.10.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/commons-codec-1.10.jar
 file.reference.commons-lang3-3.4.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/commons-lang3-3.4.jar
+file.reference.jackson-annotations-2.7.0.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jackson-annotations-2.7.0.jar
+file.reference.jackson-core-2.7.0.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jackson-core-2.7.0.jar
+file.reference.jackson-databind-2.7.0.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jackson-databind-2.7.0.jar
+file.reference.primefaces-5.3.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/primefaces-5.3.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -48,7 +52,11 @@ jar.compress=false
 javac.classpath=\
     ${libs.javaee-api-7.0.classpath}:\
     ${file.reference.commons-codec-1.10.jar}:\
-    ${file.reference.commons-lang3-3.4.jar}
+    ${file.reference.commons-lang3-3.4.jar}:\
+    ${file.reference.primefaces-5.3.jar}:\
+    ${file.reference.jackson-annotations-2.7.0.jar}:\
+    ${file.reference.jackson-core-2.7.0.jar}:\
+    ${file.reference.jackson-databind-2.7.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
