--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,11 +30,15 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.com.sun.jersey.jersey-core-1.4.0.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/com.sun.jersey.jersey-core-1.4.0.jar
 file.reference.commons-codec-1.10.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/commons-codec-1.10.jar
 file.reference.commons-lang3-3.4.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/commons-lang3-3.4.jar
 file.reference.jackson-annotations-2.7.0.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jackson-annotations-2.7.0.jar
 file.reference.jackson-core-2.7.0.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jackson-core-2.7.0.jar
 file.reference.jackson-databind-2.7.0.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jackson-databind-2.7.0.jar
+file.reference.jersey-client.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jersey-client.jar
+file.reference.json-simple-1.1.1.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/json-simple-1.1.1.jar
+file.reference.jtoggl-api-1.0.3-20160215.145135-1.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jtoggl-api-1.0.3-20160215.145135-1.jar
 file.reference.primefaces-5.3.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/primefaces-5.3.jar
 includes=**
 j2ee.compile.on.save=true
@@ -56,7 +60,11 @@ javac.classpath=\
     ${file.reference.primefaces-5.3.jar}:\
     ${file.reference.jackson-annotations-2.7.0.jar}:\
     ${file.reference.jackson-core-2.7.0.jar}:\
-    ${file.reference.jackson-databind-2.7.0.jar}
+    ${file.reference.jackson-databind-2.7.0.jar}:\
+    ${file.reference.jtoggl-api-1.0.3-20160215.145135-1.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.jersey-client.jar}:\
+    ${file.reference.com.sun.jersey.jersey-core-1.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
