--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,8 +38,11 @@ file.reference.jackson-core-2.7.0.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/j
 file.reference.jackson-databind-2.7.0.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jackson-databind-2.7.0.jar
 file.reference.jersey-client.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jersey-client.jar
 file.reference.json-simple-1.1.1.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/json-simple-1.1.1.jar
+file.reference.jsonpullparser-apt-1.6.2.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jsonpullparser-apt-1.6.2.jar
+file.reference.jsonpullparser-core-1.6.2.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jsonpullparser-core-1.6.2.jar
 file.reference.jtoggl-api-1.0.3-20160215.145135-1.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/jtoggl-api-1.0.3-20160215.145135-1.jar
 file.reference.primefaces-5.3.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/primefaces-5.3.jar
+file.reference.zaim4j-1.2.0.jar=/Users/bpg0129/GlassFish_Server1/pkg/lib/zaim4j-1.2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -64,7 +67,10 @@ javac.classpath=\
     ${file.reference.jtoggl-api-1.0.3-20160215.145135-1.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.jersey-client.jar}:\
-    ${file.reference.com.sun.jersey.jersey-core-1.4.0.jar}
+    ${file.reference.com.sun.jersey.jersey-core-1.4.0.jar}:\
+    ${file.reference.zaim4j-1.2.0.jar}:\
+    ${file.reference.jsonpullparser-apt-1.6.2.jar}:\
+    ${file.reference.jsonpullparser-core-1.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
